# proxy-dns

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.toml
include/: dns_parser.h  toml_parser.h
src/: dns_parser.c  main.c  toml_parser.c
test/: test.sh
